--- a/src/app/Pages/tab1/tab1.page.html
+++ b/src/app/Pages/tab1/tab1.page.html
@@ -1,21 +1,25 @@
-<ion-header class="ion-no-border" [translucent]="true">
-  <ion-toolbar>
+<ion-header  class="ion-no-border" [translucent]="true">
+  <ion-toolbar color="dark">
     <ion-title>
       Tab 1
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content color="dark">
 
-<ion-list>
-  <ion-item *ngFor="let item of lists" detail>
+<ion-list color="dark">
+  <ion-item *ngFor="let item of lists" detail color="dark">
     <ion-label>
       {{item.title}}
     </ion-label>
   </ion-item>
-
 </ion-list>
 
+<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab-button (click)="addItem()">
+    <ion-icon color="tertiary" name="add" ></ion-icon>
+  </ion-fab-button>
+</ion-fab>
 
 </ion-content>
