--- a/src/app/Pages/tabs/tabs.page.html
+++ b/src/app/Pages/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar color="dark" slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="clipboard-outline"></ion-icon>
       <ion-label>Pendiengs</ion-label>
