--- a/src/app/Pages/tab1/tab1.page.html
+++ b/src/app/Pages/tab1/tab1.page.html
@@ -1,25 +1,20 @@
-<ion-header  class="ion-no-border" [translucent]="true">
+<ion-header class="ion-no-border" [translucent]="true">
   <ion-toolbar color="dark">
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <ion-title> Tab 1 </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content color="dark">
+  <ion-list color="dark">
+    <ion-item *ngFor="let item of lists" detail color="dark">
+      <ion-label (click)="editTask(item.id)"> {{item.title}} </ion-label>
+      <ion-note slot="end">{{ item.items.length }} task</ion-note>
+    </ion-item>
+  </ion-list>
 
-<ion-list color="dark">
-  <ion-item *ngFor="let item of lists" detail color="dark">
-    <ion-label>
-      {{item.title}}
-    </ion-label>
-  </ion-item>
-</ion-list>
-
-<ion-fab vertical="bottom" horizontal="end" slot="fixed">
-  <ion-fab-button (click)="addItem()">
-    <ion-icon color="tertiary" name="add" ></ion-icon>
-  </ion-fab-button>
-</ion-fab>
-
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button color="tertiary" (click)="addItem()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
